<resources>
    <string name="app_name">pedGlacee</string>
    <!-- Labels do login -->
    <string name="atv_login">Autenticação</string>
    <string name="atv_menu">Menu</string>
    <string name="atv_mesas">Mesas</string>
    <string name="atv_novo_pedido">Novo Pedido</string>
    <string name="atv_meus_pedidos">Meus Pedidos</string>
    <string name="atv_comanda">Comanda</string>
    <string name="atv_cadastros">Cadastros</string>

    <!-- Labels Menu garçom -->
    <string name="txt_novo_pedido">Novo Pedido</string>
    <string name="txt_meus_pedido">Meus Pedidos</string>


    <!-- Strings related to login -->
    <string name="prompt_usuario">Usuário</string>
    <string name="prompt_senha">Senha</string>
    <string name="btnEntrar">Entrar</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <string-array name="pratos">
        <item>Assado de Panela</item>
        <item>Moqueca de arraia</item>
        <item>Frango ao molho</item>
        <item>Cupim ao forno</item>
        <item>Bife ao molho</item>
    </string-array>

    <string-array name="sucos">
        <item>Nenhum</item>
        <item>Acerola</item>
        <item>Abacaxi</item>
        <item>Morango</item>
        <item>Cajá</item>
        <item>Limão</item>
    </string-array>

    <!-- Strings do CadastroRefeição -->
    <string name="tvDescricao">Descrição:</string>
    <string name="tvTipoProduto">Tipo de Produto:</string>
    <string name="tvValor">Valor:</string>
    <string name="btAdicionar">Adicionar</string>
    <string name="btLimpar">Limpar</string>
</resources>
