<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.app.cg.pedglacee.CadastroRefeicao"
    android:background="@color/colorBackground">

    <EditText
        android:id="@+id/etDescricao"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/textView"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Digite aqui..."
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray"
        android:textCursorDrawable="@android:color/black" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="44dp"
        android:text="@string/tvDescricao"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="28dp"
        android:layout_marginStart="28dp" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:text="@string/tvTipoProduto"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:layout_below="@+id/etDescricao"
        android:layout_alignLeft="@+id/etTipoProduto"
        android:layout_alignStart="@+id/etTipoProduto" />

    <EditText
        android:id="@+id/etTipoProduto"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etDescricao"
        android:layout_alignStart="@+id/etDescricao"
        android:layout_below="@+id/textView2"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Digite aqui..."
        android:inputType="textPersonName"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tvValor"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="24sp"
        android:layout_marginTop="42dp"
        android:layout_below="@+id/etTipoProduto"
        android:layout_alignLeft="@+id/etTipoProduto"
        android:layout_alignStart="@+id/etTipoProduto" />

    <EditText
        android:id="@+id/etValor"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView3"
        android:layout_alignStart="@+id/textView3"
        android:layout_below="@+id/textView3"
        android:backgroundTint="@android:color/darker_gray"
        android:ems="10"
        android:hint="Digite aqui..."
        android:inputType="numberDecimal"
        android:textColor="@android:color/black"
        android:textColorHint="@android:color/darker_gray" />

    <Button
        android:id="@+id/btAdicionar"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/etValor"
        android:layout_alignStart="@+id/etValor"
        android:layout_below="@+id/etValor"
        android:layout_marginTop="54dp"
        android:background="@android:color/holo_red_dark"
        android:backgroundTintMode="src_atop"
        android:elevation="9dp"
        android:onClick="adicionar"
        android:text="@string/btAdicionar"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btLimpar"
        android:layout_width="450dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@android:color/holo_red_dark"
        android:onClick="limpar"
        android:text="@string/btLimpar"
        android:textSize="18sp"
        android:layout_below="@+id/btAdicionar"
        android:layout_alignLeft="@+id/btAdicionar"
        android:layout_alignStart="@+id/btAdicionar" />

</RelativeLayout>
